qis-compiler/snapshots/selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm14_read_result_float.snap
---
source: qis-compiler/rust/gpu.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@no_gpu_error = private unnamed_addr constant [27 x i8] c"No error message available\00", align 1

define private { i64, double } @_hl.main.1(i64 %0) {
alloca_block:
  %"0" = alloca i64, align 8
  %"1" = alloca double, align 8
  %"2_0" = alloca i64, align 8
  %"4_0" = alloca i64, align 8
  %"4_1" = alloca double, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, i64* %"2_0", align 4
  %"2_01" = load i64, i64* %"2_0", align 4
  %int_result = alloca i64, align 8
  %read_status = call i8 @gpu_get_result_64bits(i64 %"2_01", i64* %int_result)
  call void @validate_gpu_response(i8 %read_status)
  %float_result_ptr = bitcast i64* %int_result to double*
  %float_result = load double, double* %float_result_ptr, align 8
  store i64 %"2_01", i64* %"4_0", align 4
  store double %float_result, double* %"4_1", align 8
  %"4_02" = load i64, i64* %"4_0", align 4
  %"4_13" = load double, double* %"4_1", align 8
  store i64 %"4_02", i64* %"0", align 4
  store double %"4_13", double* %"1", align 8
  %"04" = load i64, i64* %"0", align 4
  %"15" = load double, double* %"1", align 8
  %mrv = insertvalue { i64, double } undef, i64 %"04", 0
  %mrv6 = insertvalue { i64, double } %mrv, double %"15", 1
  ret { i64, double } %mrv6
}

declare i8 @gpu_get_result_64bits(i64, i64*)

; Function Attrs: noinline
define void @validate_gpu_response(i8 %0) #0 {
entry:
  %success = icmp ne i8 %0, 0
  br i1 %success, label %ok, label %err

ok:                                               ; preds = %entry
  ret void

err:                                              ; preds = %entry
  call void @gpu_error_handler()
  unreachable
}

; Function Attrs: noinline
define void @gpu_error_handler() #0 {
entry:
  %error_message = call i8* @gpu_get_error()
  %is_null = icmp eq i8* %error_message, null
  %error_message_nonnull = select i1 %is_null, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @no_gpu_error, i32 0, i32 0), i8* %error_message
  call void @panic_str(i32 70002, i8* %error_message_nonnull)
  unreachable
}

declare i8* @gpu_get_error()

; Function Attrs: noreturn
declare void @panic_str(i32, i8*) #1

attributes #0 = { noinline }
attributes #1 = { noreturn }
